# git-remove-merged-branches

./: .envrc  Cargo.toml  README.md  flake.nix
src/: main.rs
