[package]
name = "git-remove-merged-branches"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = { version = "4.5.51", features = ["derive"] }
extend = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
